<resources>
    <string name="app_name">Hewan Pedia Restu</string>
    <string name="Biodata">BIODATA</string>
    <string name="Nama">Nama: Restu Antoni</string>
    <string name="Nim">Nim : 200602023</string>
    <string name="Prodi">Prodi : Programan Mobile</string>
    <string name="Hobi">Hobi : Main Game</string>
    <string name="Jurusan">Jurusan : Teknik Informatika</string>
    <string name="Fakultas">Fakultas : Teknik</string>
    <string name="Daftar_Ras">Daftar Ras Hewan</string>
    <string name="KucingAK"><![CDATA[Kucing Anjing & Katak Pedia]]></string>
    <string name="TekanGambar">(Tekan gambar hewan untuk membuka galeri)</string>
    <string name="RasA">Ras Anjing</string>
    <string name="JenisHe">Jenis Hewan</string>
    <string name="Asal">Asal</string>
    <string name="Deskripsi">Deskripsi hewan</string>
    <string name="KINTAMI">Kintamani</string>
    <string name="Bali">Bali</string>
    <string name="Anggora">Angora</string>
    <string name="Turki">Turki</string>
    <string name="Aslinya">Aslinya berasal dari Ankara, Turki dengan ciri khas berbulu panjang dan lembut</string>
    <string name="bengal">Bengal</string>
    <string name="merupakan">Merupakan hasil persilangan antara Kucing Leopard Asia dengan kucing domestik Inggris</string>
    <string name="birmani">Birmani</string>
    <string name="birmanmyanmar">Birma/Myanmar</string>
    <string name="konon">Konon awalnya merupakan ras kucing yand biasa menemani para biksu yang menetap pada kuil di Birma</string>
    <string name="persia">Persia</string>
    <string name="dariiran">Kucing berbulu panjang dengan wajah bundar dan hidung pesek. Awalnya berasal dari Iran kemudian diimpor ke Italia</string>
    <string name="Siam">Siam</string>
    <string name="Thailand">Thailand</string>
    <string name="Kucingan">Kucing hasil turunan dari Wichian Maat (Kucing Thailand) dengan ciri khas berbadan panjang dan langsing, wajah lonjong, telinga lebar, dan mata kebiruan</string>
    <string name="siberia">Siberia</string>
    <string name="rusia">Rusia</string>
    <string name="kucingdomestik">\"Kucing domestik Rusia dengan bulu lebat dan badan besar tapi sangat lincah dan terkenal dengan kemampuan melompatnya \"</string>
    <string name="buldog">Bulldog</string>
    <string name="inggris">Inggris</string>
    <string name="anjinh">Anjing populer yang dikenal dengan badan yang gemuk berotot, wajah seperti kain kusut, dan hidung yang pesek</string>
    <string name="husky">Husky</string>
    <string name="alaska">\"Alaska,Siberia,Finlandia (daerah bersalju) \"</string>
    <string name="awalnya">Anjing jenis khusus yang awalnya digunakan untuk menarik kereta salju</string>
    <string name="kintami">Kintamani</string>
    <string name="Indonesia">Indonesia</string>
    <string name="Rasanjing">\"Ras anjing asli pulau Bali \"</string>
    <string name="samoyed">Samoyed</string>
    <string name="Rusia">Rusia</string>
    <string name="Anjijgberasal">Anjing yang berasal dari Siberia yang awalnya biasa digunakan untuk menjaga ternak oleh suku Samoyed</string>
    <string name="shpered">Shepherd</string>
    <string name="jerman">Jerman</string>
    <string name="anjingpintar">Anjing pintar dan kuat, sekarang banyak digunakan sebagai anjing penjaga, pengawal, dan anjing polisi (K9)</string>
    <string name="shiba">Shiba</string>
    <string name="jepang">Jepang</string>
    <string name="anjinggawal">\"Anjing dari daerah Shiba ini gesit dan lincah sehingga awalnya banyak digunakan untuk berburu \"</string>
    <string name="katakpanah">Katak panah beracun biru</string>
    <string name="barazil">Brazil dan selatan Suriname</string>
    <string name="Katakini">katak ini mengandung cukup racun untuk menyebabkan bahaya atau kematian pada manusia.</string>
    <string name="raskatak">Katak fantasmal beracun</string>
    <string name="ekuador">Ekuador</string>
    <string name="melansir">Melansir Welsh Mountain Zoo, di alam liar, toksinnya dibuat dari makanan yang mereka konsumsi seperti semut atau serangga beracun..</string>
    <string name="katakstroberiy">Katak panah beracun stroberi</string>
    <string name="nikaragua">Nikaragua dan Kosta Rika</string>
    <string name="yaituraipu">paling beracun dari genusnya. Seperti katak panah lain, katak ini mendapatkan toksisitasnya dari makanan, yaitu rayap dan semut.</string>
    <string name="katakracungolf">Katak racun golfodulcean</string>
    <string name="Amerikatengah">Amerika Tengah</string>
    <string name="dikomsumsi">satu katak memiliki cukup racun untuk membunuh 13 manusia dewasa! Namun, untuk mendapat efek mematikan, racun ini harus dikonsumsi, bukan disuntikkan.</string>
    <string name="racunkokoe">Katak panah racun kokoe</string>
    <string name="kolombia">Kolombia</string>
    <string name="efeknya">Menyentuh katak dewasa bisa menyebabkan gejala neurologis serius dan mengancam jiwa. Gejalanya termasuk demam tinggi, kehilangan kendali otot, kejang, hingga kelumpuhan. Efeknya akan lebih fatal jika katak ini dimakan.</string>
    <string name="rarcunmerah">Katak racun punggung merah</string>
    <string name="ecuadorperu">Ekuador dan Peru</string>
    <string name="Racunnya">Racunnya bisa membunuh predator kecil seperti burung dan menyebabkan cedera serius pada manusia..</string>
    <string name="listbinatang">Daftar Berbagai Binatang</string>
    <string name="anjing_list_title">Anjing</string>
    <string name="title_kucing">Kucing</string>
    <string name="title_katak">Katak</string>
</resources>